# mod2c

./: .gitexternals  CMakeLists.txt  README.md  mod2cConfigVersion.cmake.in
CMake/: CPackConfig.cmake  FindPackages.cmake
CMake/config/: ReleaseDebugAutoFlags.cmake
doc/: release-notes.dox  user-guide.dox  welcome.dox
src/mod2c/: CMakeLists.txt  consist.c  deriv.c  discrete.c  init.c  io.c  kinetic.c  modl.c  nmodlfunc.h  noccout.c  nocpout.c  parsact.c  solve.c
src/mod2c_core/: CMakeLists.txt  consist.c  deriv.c  discrete.c  init.c  io.c  kinetic.c  list.c  modl.c  modl.h  nmodlconf.h  nmodlfunc.h  noccout.c  nocpout.c  parsact.c  parse1.y  partial.c  sens.c  simultan.c  solve.c  symbol.c  units.c  version.c
src/nocmodl/: CMakeLists.txt  deriv.c  hpm_profiling.h  io.c  kinetic.c  noccout.c  nocpout.c  parsact.c  parse1.y  solve.c
src/nocmodl_core/: CMakeLists.txt  deriv.c  kinetic.c  noccout.c  nocpout.c  parsact.c  parse1.y  partial.c  simultan.c  solve.c  units.c  version.c
test/validation/: CMakeLists.txt  README  test_mod2c  test_mod2c.in
test/validation/mod/: SynNMDA10_1.mod  SynNMDA10_2.mod  SynNMDA10_2_2.mod  SynNMDA16.mod  SynNMDA16_2.mod  isi.mod
test/validation/mod2c/c/: Ca.c  CaDynamics_E2.c  Ca_HVA.c  Im.c  K_Pst.c  KdShu2007.c  NaSm.c  NaTs2_t.c  Nap.c  NapDA.c  NapIn.c  Nap_E.c  Nap_No.c  ProbGABAAB_EMS.c  StochKv.c  SynNMDA10_1.c  SynNMDA10_2.c  SynNMDA10_2_2.c  SynNMDA16.c  SynNMDA16_2.c  is.c  netstim_inhpoisson.c  zoidsyn.c
test/validation/mod2c_core/c/: Ca.c  CaDynamics_E2.c  Ca_HVA.c  Ca_LVAst.c  Ih.c  Im.c  K_Pst.c  K_Tst.c  KdShu2007.c  NaSm.c  NaTa_t.c  NaTs2_t.c  Nap.c  NapDA.c  NapIn.c  Nap_E.c  Nap_Et2.c  Nap_No.c  ProbAMPANMDA_EMS.c  ProbGABAAB_EMS.c  SK_E2.c  SKv3_1.c  StochKv.c  SynNMDA10_1.c  SynNMDA10_2.c  SynNMDA10_2_2.c  SynNMDA16.c  SynNMDA16_2.c  is.c  netstim_inhpoisson.c  new_calcium_channels.c  zoidsyn.c
test/validation/nocmodl/c/: Ca.c  CaDynamics_E2.c  Ca_HVA.c  Ca_LVAst.c  Ih.c  Im.c  K_Pst.c  K_Tst.c  KdShu2007.c  NaTa_t.c  NaTs2_t.c  Nap_Et2.c  ProbAMPANMDA_EMS.c  ProbGABAAB_EMS.c  SK_E2.c  SKv3_1.c  StochKv.c  netstim_inhpoisson.c  new_calcium_channels.c
test/validation/nocmodl_core/c/: Ca.c  CaDynamics_E2.c  Ca_HVA.c  Ca_LVAst.c  Ih.c  Im.c  K_Pst.c  K_Tst.c  KdShu2007.c  NaTa_t.c  NaTs2_t.c  Nap_Et2.c  ProbAMPANMDA_EMS.c  ProbGABAAB_EMS.c  SK_E2.c  SKv3_1.c  StochKv.c  netstim_inhpoisson.c  new_calcium_channels.c
